# group10-semantic-affordance-grounding

./: README.md  pyproject.toml  report.md
docs/: homework-starter-README.md
docs/widoco/group-ontology/doc/: index-en.html  ontology.jsonld  ontology.nt  ontology.owl  ontology.ttl
docs/widoco/group-ontology/doc/provenance/: provenance-en.html  provenance-en.ttl
ontology/: group-ontology.ttl  inferred-results.ttl  shapes.ttl
ontology/imports/: course-affordance.ttl  course-alignment.ttl
queries/: graspable_objects.rq  non_graspable_task_objects.rq  object_affordance_summary.rq  simulation_grounding.rq  task_objects.rq
report/tex/: report.tex
results/: analysis_report.md  graspable_objects_output.txt  non_graspable_task_objects_output.txt  object_affordance_summary_output.txt  simulation_grounding_output.txt  task_objects_output.txt
src/: run_analysis.py  run_reasoning.py  run_validation.py  validate_submission.py
tests/: test_analysis.py  test_hw5_workflow.py  test_shacl_validation.py
